[package]
name = "ss13_make_rotationals"
version = "0.0.1"
authors = ["Warriorstar Orion <orion@snowfrost.garden>"]
edition = "2021"

[[bin]]
name = "make_rotationals"
path = "lib/make_rotationals.rs"

[dependencies]
dmi = "0.3.4"
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.7"
